[package]
name = "space-analyser"
version = "0.1.0"
edition = "2021"

# [build]
# target = "x86_64-unknown-linux-musl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18.0"
crossterm = "0.23.2"
unicode-width = "0.1.9"
fs2 = "0.4.3"